[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/GameMaster.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Combo/Combo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Game.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/TimeTrial/TimeTrial.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
Game = ExtResource( 3 )
ComboScene = ExtResource( 2 )

[node name="CornersCombo" type="Node" parent="."]

[node name="UpperLeft" type="Node2D" parent="CornersCombo"]
position = Vector2( 256, 256 )

[node name="LowerRight" type="Node2D" parent="CornersCombo"]
position = Vector2( 464, 1024 )

[node name="ComboTimer" type="Timer" parent="."]
one_shot = true

[node name="TimeTrial" parent="." instance=ExtResource( 4 )]
